--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
             <version>3.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.2</version>
+        </dependency>
 
 
         <!--lombok插件-->
