--- a/eladmin-system/src/main/resources/config/application.yml
+++ b/eladmin-system/src/main/resources/config/application.yml
@@ -29,9 +29,9 @@ spring:
     database: ${REDIS_DB:0}
     host: ${REDIS_HOST:127.0.0.1}
     port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:123456}
+#    password: ${REDIS_PWD:123456}
     #连接超时时间
-    timeout: 5000
+    timeout: 15000
 
 task:
   pool:
