--- a/eladmin-system/src/main/resources/config/application-prod.yml
+++ b/eladmin-system/src/main/resources/config/application-prod.yml
@@ -119,8 +119,8 @@ file:
     path: /home/eladmin/file/
     avatar: /home/eladmin/avatar/
   windows:
-    path: C:\eladmin\file\
-    avatar: C:\eladmin\avatar\
+    path: D:\eladmin\file\
+    avatar: D:\eladmin\avatar\
   # 文件大小 /M
   maxSize: 100000
   avatarMaxSize: 5
