--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -39,6 +39,19 @@
             <version>2.6</version>
         </dependency>
 
+<!--        解压-->
+        <dependency>
+            <groupId>com.github.junrar</groupId>
+            <artifactId>junrar</artifactId>
+            <version>7.4.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.lingala</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
 
         <!-- Spring boot websocketf -->
 		<dependency>
